# castle-rustenstein

./: Cargo.toml  Makefile
data/animations/: die.json  walking.json
data/entities/: barrel.json  cacodemon.json  greenlight.json  pillar.json  soldier.json
data/maps/: map.json  map_textured.json
data/maps/map_textured/: map_textured.json
data/maps/test_map_large/: test_map_large.json
data/maps/test_map_small/: test_map_small.json
data/textures/sprites/: 01_barrel_meta.json  02_greenlight_meta.json  03_pillar_meta.json  04_soldier_meta.json  05_cacodemon_meta.json
src/: animation.rs  data.rs  game.rs  main.rs  sprites.rs  textures.rs
src/data/maps/: map.json  map_textured.json
