[package]
name = "rustenstein"
version = "0.1.0"
authors = ["Jake"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.33.0", default-features = false, features = [ "ttf" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cgmath = "0.17.0"
image = "0.23.0"
glob = "0.3.0"

[features]
default = []
use_mac_framework = ["sdl2/use_mac_framework"]

[profile.dev]
opt-level = 2
